<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activity.CadastroUsuarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="18dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cadastro"
                android:textAlignment="center"
                android:textSize="45sp"
                android:layout_marginBottom="20sp"/>

            <EditText
                android:id="@+id/nomeUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nome"/>

            <EditText
                android:id="@+id/telefoneUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="Telefone"/>

            <EditText
                android:id="@+id/emailUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email"/>

            <EditText
                android:id="@+id/senhaUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Senha"/>

            <EditText
                android:id="@+id/senha2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="Repia a Senha"/>

            <Button
                android:id="@+id/cadUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="cadastrar"
                android:layout_marginTop="25sp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>