<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.TelaPrincipalActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lista de Vagas"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"/>

    <ListView
        android:id="@+id/listViewVagas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewTodosOsVagas"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"/>


</LinearLayout>